[project]
name = "tosinging"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "librosa>=0.11.0",
    "music21>=9.9.1",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pyworld>=0.3.5",
    "scipy>=1.16.3",
    "setuptools>=80.9.0",
    "soundfile>=0.13.1",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]
